fix spacing issue when run on Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ ol.choices {
 
 ol.choices li {
 	padding-left: 15px;
+	padding-bottom: 10px;
 	margin-left: 5px;
 }
 
